Fixed button alignmnt

--- a/ass1-sass/sass/pages/_home.scss
+++ b/ass1-sass/sass/pages/_home.scss
@@ -221,7 +221,7 @@
     }
 
     .form-wrapper {
-      margin: 10% 5% 0;
+      margin-top: 10%;
         
         form {
           margin-bottom: 0;
@@ -290,8 +290,6 @@
 
       .add-button {
         background-color: $dark-blue;
-        left: 25px;
-        position: relative;
       }
     }
   }
